@@ -118,6 +118,25 @@ def update_ldso(ld_search_path, offset='/'):
     new_f.close()
 
 
+def perform_env_update(root, skip_ldso_update=False):
+    d, inc, colon = collapse_envd(pjoin(root, "etc/env.d"))
+
+    l = d.pop("LDPATH", None)
+    if l is not None and not skip_ldso_update:
+        update_ldso(l, root)
+
+    string_collapse_envd(d, inc, colon)
+
+    new_f = AtomicWriteFile(pjoin(root, "etc", "profile.env"), uid=os_data.root_uid, gid=os_data.root_gid, perms=0644)
+    new_f.write("# autogenerated.  update env.d instead\n")
+    new_f.writelines('export %s="%s"\n' % (k, d[k]) for k in sorted(d))
+    new_f.close()
+    new_f = AtomicWriteFile(pjoin(root, "etc", "profile.csh"), uid=os_data.root_uid, gid=os_data.root_gid, perms=0644)
+    new_f.write("# autogenerated, update env.d instead\n")
+    new_f.writelines('setenv %s="%s"\n' % (k, d[k]) for k in sorted(d))
+    new_f.close()
+
+
 class env_update(triggers.base):
 
     required_csets = ()
@@ -125,23 +144,7 @@ class env_update(triggers.base):
     _hooks = ('post_unmerge', 'post_merge')
 
     def trigger(self, engine):
-        offset = engine.offset
-        d, inc, colon = collapse_envd(pjoin(offset, "etc/env.d"))
-
-        l = d.pop("LDPATH", None)
-        if l is not None:
-            update_ldso(l, engine.offset)
-
-        string_collapse_envd(d, inc, colon)
-
-        new_f = AtomicWriteFile(pjoin(offset, "etc", "profile.env"), uid=os_data.root_uid, gid=os_data.root_gid, perms=0644)
-        new_f.write("# autogenerated.  update env.d instead\n")
-        new_f.writelines('export %s="%s"\n' % (k, d[k]) for k in sorted(d))
-        new_f.close()
-        new_f = AtomicWriteFile(pjoin(offset, "etc", "profile.csh"), uid=os_data.root_uid, gid=os_data.root_gid, perms=0644)
-        new_f.write("# autogenerated, update env.d instead\n")
-        new_f.writelines('setenv %s="%s"\n' % (k, d[k]) for k in sorted(d))
-        new_f.close()
+        perform_env_update(engine.offset)
 
 
 def simple_chksum_compare(x, y):
